test/files/neg/bug664.check
bug664.scala:4: error: type Foo is not a member of test.Test with ScalaObject
  trait Foo extends super.Foo {
                          ^
bug664.scala:5: error: type Bar is not a member of AnyRef with ScalaObject
    trait Bar extends super.Bar;
                            ^
two errors found
